# Numcy

./: .gitignore  CMakeLists.txt
examples/: example.cpp
include/: numcy.hpp
include/numcy/: array.hpp  array.tpp
include/numcy/array/: array.hpp  array.tpp
include/numcy/core/: array.hpp  array.tpp
include/numcy/maths/: maths.hpp  maths.tpp
include/numcy/random/: random.hpp  random.tpp
include/numcy/stats/: stats.hpp  stats.tpp
include/numcy/utils/: utils.hpp  utils.tpp
